Bug 441124 - Renaming folders from folders panel context menu fails
Summary: Renaming folders from folders panel context menu fails
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-08-18 09:46 UTC by Goran Brannstrom
Modified: 2021-09-12 12:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Goran Brannstrom 2021-08-18 09:46:12 UTC
SUMMARY

I can no longer rename, modify a file in the dolphin application by right-clicking an choosing modifying commands, only look.

STEPS TO REPRODUCE
1. Right-click on a file
2. Choose "Rename"
3. Change the file ame

OBSERVED RESULT
File name does not change.

EXPECTED RESULT
I expect the name to change.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Linux tor 5.11.0-25-generic, Ubuntu 21.04 
KDE Plasma Version: 4:5.22.4
KDE Frameworks Version: 5.85.0-0ubuntu1~ubuntu21.04~ppa2 
Qt Version: 5.15.2

ADDITIONAL INFORMATION
- Started after apt-get update && apt-get upgrade
- I have enabled kubuntu backports.
Comment 1 Nate Graham 2021-08-18 16:17:34 UTC
Cannot reproduce; works for me with both inline renaming and non-inline renaming.
Comment 2 Goran Brannstrom 2021-08-18 18:05:46 UTC
I realize now, that this problem only occurs in the "Folders" panel, not the main/content panel where the files are shown.
Comment 3 Nate Graham 2021-08-18 18:20:13 UTC
Can confirm, that is indeed broken.
Comment 4 Goran Brannstrom 2021-08-19 12:49:48 UTC
Glad to hear that. I thought it was just me going crazy. :-) 
Well, the workaround for now then is to make changes in the main panel instead.
Comment 5 Bug Janitor Service 2021-08-19 14:42:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/260
Comment 6 Méven Car 2021-08-27 08:47:50 UTC
Git commit 1d125057cb6318bca795fd4a153c2675c881a9d1 by Méven Car, on behalf of Jan Paul Batrina.
Committed on 27/08/2021 at 07:29.
Pushed by meven into branch 'release/21.08'.

FoldersPanel: Fix inline renaming

Commit 5a0da4a9c8d10dc1921077d84bdabf05d20150b0 changed the value
for emitRoleEditingFinished() to a struct containing
the new name, but folderspanel was not updated.

M  +3    -1    src/panels/folders/folderspanel.cpp

https://invent.kde.org/system/dolphin/commit/1d125057cb6318bca795fd4a153c2675c881a9d1
Comment 7 Goran Brannstrom 2021-09-12 12:56:32 UTC
After "apt update & apt upgrade" today, I no longer experience this bug in Kubuntu with these software versions...

Dolphin Version 21.08.1
KDE Frameworks 5.85.0
Qt 5.15.2

Feels great to be able to rename things again! Thanks to all involved!

/Goran Brannstrom