FoldersPanel: Fix inline renaming

Commit 5a0da4a9c8d10dc1921077d84bdabf05d20150b0 changed the value
for emitRoleEditingFinished() to a struct containing
the new name, but folderspanel was not updated.

BUG: 441124